--- a/scss/parts/padding.scss
+++ b/scss/parts/padding.scss
@@ -1,33 +1,28 @@
-@mixin padding($p){
-	.p#{$p} {
-		padding: #{$p}px;
-		padding-top: #{$p}px;
-		padding-right: #{$p}px;
-		padding-bottom: #{$p}px;
-		padding-left: #{$p}px;
+@mixin rep($value, $prop){
+	$prop-name: str-slice($prop, 0, 1);
+	.#{$prop-name}#{$value} {
+		#{$prop}: #{$value}px;
+		#{$prop}-top: #{$value}px;
+		#{$prop}-right: #{$value}px;
+		#{$prop}-bottom: #{$value}px;
+		#{$prop}-left: #{$value}px;
+	}
+
+	/* #{$value} px */
+	@each $name in top, bottom, left, right{
+		.#{$prop-name}#{$value}#{str-slice($name, 0, 1)} {
+			#{$prop}-#{$name}: #{$value}px;
+		}
 	}
 }
 
-@mixin margin($m){
-	/* margin #{$m} px*/
-	.m#{$m} {
-		margin: #{$m}px;
-		margin-top: #{$m}px;
-		margin-right: #{$m}px;
-		margin-bottom: #{$m}px;
-		margin-left: #{$m}px;
+@each $x in 0, 1, 2, 3, 4, 5, 8, 10, 15, 20, 25, 30, 35, 40, 45, 50 {
+	@include rep($x, 'margin');
+	@include rep($x, 'padding');
+}
+
+@for $x from 1 through 50 {
+	.l#{$x}{
+		line-height: #{$x/16}em;
 	}
-}
-
-@each $n in 0, 1, 2, 3, 4, 5, 8, 10, 15, 20, 25, 30, 35, 40, 45, 50{
-	@include margin($n);
-	@include padding($n);
-}
-
-@for $i from 1 through 50{
-	.f#{$i} {font-size: #{$i / 16}em;}
-}
-
-@each $x in 100, 200, 300, 400, 500, 600, 700, 800, 900{
-	.f#{$x} {font-weight: #{$x};}
 }
