--- a/scss/oocss.scss
+++ b/scss/oocss.scss
@@ -1,9 +1,47 @@
-// sass --watch scss/oocss.scss css/oocss.css
+// sass  --watch scss/oocss.scss css/oocss.css
+// sass  --watch scss/oocss.scss style.min.css --style compressed
+// sass  scss/oocss.scss style.min.css --style compressed
+
 @import 'parts/background-color.scss';
 @import 'parts/border-radius.scss';
 @import 'parts/color.scss';
 @import 'parts/line-height.scss';
-@import 'parts/margin.scss';
 @import 'parts/padding.scss';
 @import 'parts/text-align.scss';
 @import 'parts/text-decoration.scss';
+@import 'parts/margin.scss';
+@import 'parts/float.scss';
+@import 'parts/font-size.scss';
+
+@import '../styles/include.scss';
+
+
+
+hr[title].title-line{
+	float: left;
+	width: 100%;
+	border: 0;
+	position: relative;
+	text-align: center;
+}
+
+hr.title-line[title]::before{
+	content: attr(title);
+	z-index: 1;
+	position: relative;
+	padding: 0 5px;
+	font-size: 14px;
+	line-height: inherit;
+	background-color: white;
+}
+
+hr.title-line[title]::after{
+	content: '';
+	float: left;
+	width: 100%;
+	height: 1px;
+	top: 50%;
+	left: 0;
+	position: absolute;
+	background-color: #eee;
+}
