--- a/scss/parts/app.scss
+++ b/scss/parts/app.scss
@@ -1,31 +1,29 @@
-$props: (
-	border-radius: (
-		prefix: r,
-		values: (1, 2, 3, 4, 5, 8, 10, 15, 20, 25, 30, 50, 100)
-	),
-	float: (
-		prefix: fl,
-		values: (left, right, none, inline-start, inline-end, inherit, initial, unset)
-	),
-	text-align: (
-		prefix: al,
-		values: (left, right, center, justify, justify-all, start, end, match-parent,center, inherit, initial, unset)
-	),
-	display: (
-		prefix: ds,
-		values: (none, inline, block, list-item, inline-block, inline-table, table, table-cell, table-column, table-column-group, table-footer-group, table-header-group, table-row, table-row-group, flex, inline-flex, grid, inline-grid, run-in, inherit)
-	),
-	//font
-	font-style: (
-		prefix: fs,
-		values: (normal, italic, oblique)
-	)
-);
+$colors: "aliceblue", "antiquewhite", "aqua", "aquamarine", "azure", "beige", "bisque", "black", "blanchedalmond", "blue", "blueviolet", "brown", "burlywood", "cadetblue", "chartreuse", "chocolate", "coral", "cornflowerblue", "cornsilk", "crimson", "cyan", "darkblue", "darkcyan", "darkgoldenrod", "darkgray", "darkgreen", "darkgrey", "darkkhaki", "darkmagenta", "darkolivegreen", "darkorange", "darkorchid", "darkred", "darksalmon", "darkseagreen", "darkslateblue", "darkslategray", "darkslategrey", "darkturquoise", "darkviolet", "deeppink", "deepskyblue", "dimgray", "dimgrey", "dodgerblue", "firebrick", "floralwhite", "forestgreen", "fuchsia", "gainsboro", "ghostwhite", "goldenrod", "gold", "gray", "green", "greenyellow", "grey", "honeydew", "hotpink", "indianred", "indigo", "ivory", "khaki", "lavenderblush", "lavender", "lawngreen", "lemonchiffon", "lightblue", "lightcoral", "lightcyan", "lightgoldenrodyellow", "lightgray", "lightgreen", "lightgrey", "lightpink", "lightsalmon", "lightseagreen", "lightskyblue", "lightslategray", "lightslategrey", "lightsteelblue", "lightyellow", "lime", "limegreen", "linen", "magenta", "maroon", "mediumaquamarine", "mediumblue", "mediumorchid", "mediumpurple", "mediumseagreen", "mediumslateblue", "mediumspringgreen", "mediumturquoise", "mediumvioletred", "midnightblue", "mintcream", "mistyrose", "moccasin";
 
 @mixin element($name, $prefix, $values){
 	@each $value in $values {
 		.#{$prefix}-#{$value}{
 			#{$name}: #{$value};
+		}
+	}
+}
+
+@mixin prop($name, $prefix){
+	$arr: (t: top, r: right, b: bottom, l: left);
+	
+	@for $size from 0 through 50{
+		@if $size == 0{
+			/* --- No Padding --- */
+			.no-#{$name} {#{$name}: 0;}
+		} @else{
+			/* --- Padding #{$size}px --- */
+			.#{$prefix}#{$size} {#{$name}: #{$size}px;}
+		}
+
+		@each $side in map-keys($arr){
+			.#{$prefix}#{$size}#{$side}{
+				#{$name}-#{map-get($arr, $side)}:  #{$size}px;
+			}
 		}
 	}
 }
