--- a/scss/parts/font-size.scss
+++ b/scss/parts/font-size.scss
@@ -1,5 +1,5 @@
+// sass scss/parts/font-size.scss css/parts/font-size.css
 // sass --watch  scss/parts/font-size.scss css/parts/font-size.css
-
 @for $size from 0 through 60{
 	$calc: $size / 16;
 
