--- a/styles/form/inputs/form.css
+++ b/styles/form/inputs/form.css
@@ -1,149 +1,3 @@
-.input{float: left; width: 100%;}
-
-/*INPUT > Float Label*/
-.input.shadow{}
-.input.shadow.f15 .field{font-weight: normal; padding: 6px;}
-.input.shadow.f16 .field{font-weight: normal; padding: 6px;}
-.input.shadow.f18 .field{font-weight: normal; padding: 8px;}
-.input.shadow.f22 .field{font-weight: 300; padding: 8px;}
-
-.input.shadow .options{border: 1px solid #ccc; border-radius: 3px;}
-.input.shadow.f15 .options{font-weight: normal; padding: 6px 0;}
-.input.shadow.f16 .options{font-weight: normal; padding: 6px 0;}
-.input.shadow.f18 .options{font-weight: normal; padding: 8px 0;}
-.input.shadow.f22 .options{font-weight: 300; padding: 8px 0;}
-
-.input.shadow.f15 .output{font-weight: normal; padding: 6px;}
-.input.shadow.f16 .output{font-weight: normal; padding: 6px;}
-.input.shadow.f18 .output{font-weight: normal; padding: 8px;}
-.input.shadow.f22 .output{font-weight: 300; padding: 8px;}
-
-.input.shadow .field{
-	float: left;
-	width: 100%;
-	border-radius: 3px;
-	font-size: inherit;
-	border: 1px solid #ccc;
-	box-shadow: 0 1px 0 rgba(255,255,255,.5), 0 1px 0 rgba(0,0,0,.07) inset;
-}
-.input.shadow .legend{
-	float: left;
-	font-size: 14px;
-	font-weight: 500;
-	padding-left: 2px;
-}
-
-/*INPUT > Float Label*/
-.input.float{
-	float: left; 
-	width: 100%;
-	position: relative;
-	margin: 15px 0;
-}
-.input.float:before{
-	content: '';
-	height: 2px;
-	width: 100%;
-	bottom: 0;
-	position: absolute;
-	background-color: #eee;
-}
-.input.float:hover::before{background-color: #ccc;}
-.input.float:focus-within:before{background-color: blue;}
-
-.input.float.gray .field{border-bottom-color: #e8e8e8;}
-
-.input.float .field{
-	border: 0;
-	float: left;
-	width: 100%; 
-	line-height: 20px;
-	border: 0;
-	background-color: transparent;
-}
-
-
-.input.float > span{
-	position: absolute;
-	left: 0;
-	cursor: text;
-	height: 20px;
-	line-height: 20px;
-	font-size: inherit;
-	transition-duration: .2s;
-	transition-property: top;
-	top: 50%;
-	margin-top: -10px;
-}
-
-
-.input.float > .field::-webkit-input-placeholder {opacity: 0;}
-
-.input.float > .field:not(:placeholder-shown) + .legend,
-.input.float > .field:focus + .legend {
-	color: #999;
-	cursor: default;
-	font-weight: 500;
-	font-size: 14px;
-	margin-top: -15px;
-	top: 0;
-}
-
-.input.float > .field:focus + .legend{color: blue;}
-.input.float > .field:focus::-webkit-input-placeholder {opacity: 1;}
-
-.input.float.f16 > .field{padding: 6px 0;}
-.input.float.f18 > .field{padding: 8px 0;}
-.input.float.f20 > .field{padding: 9px 0; font-weight: 300;}
-.input.float.f22 > .field{padding: 10px 0; font-weight: 300;}
-
-.input.float.f16 > span{font-weight: 500;}
-.input.float.f20 > span,
-.input.float.f22 > span{font-weight: 300;}
-
-.select.float{
-	float: left;
-	width: 100%;
-	position: relative;
-}
-
-.select.float .field{
-	border: 0;
-	float: left;
-	width: 100%; 
-	line-height: 20px;
-	cursor: pointer;
-	border: 1px solid transparent;
-	border-bottom-color: #eee;
-}
-
-.select.float.f16 .field{padding: 6px 0;}
-.select.float.f18 .field{padding: 8px 0;}
-.select.float.f20 .field{padding: 9px 0; font-weight: 300;}
-.select.float.f22 .field{padding: 10px 0; font-weight: 300;}
-
-.select.float .menu{
-	top: 0;
-	left: 0;
-	width: 100%;
-	float: left;
-	background-color: #eee;
-	position: absolute;
-	display: none;
-	flex-direction: column;
-	flex-wrap: nowrap;
-	border-radius: 5px;
-	overflow: hidden;
-}
-
-.select.float .option{float: left; width: 100%; padding: 10px; cursor: pointer;}
-.select.float .selected{order: -1; background-color: blue;}
-
-
-
-
-
-
-
-
-
+@import './float.css';
+@import './shadow.css';
+@import './line.css';
