--- a/styles/form/inputs/painel.css
+++ b/styles/form/inputs/painel.css
@@ -1,4 +1,7 @@
-body{font-family: roboto; background-color: #f4f4f4;}
+body{
+	font-family: roboto; 
+	/*background-color: #f4f4f4;*/
+}
 
 form{
 	float: left;
@@ -19,7 +22,7 @@ form section[title]:before{
 	grid-column: span 4;
 }
 
-form section{
+form section:not(.no-grid){
 	float: left;
 	width: 100%;
 	display: grid;
