--- a/views/buttons.html
+++ b/views/buttons.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Buttons</title>
-	<link rel="stylesheet" href="node_modules/css-reset/reset.css">
-	<link rel="stylesheet" href="styles/buttons/buttons.css">
-	<link rel="stylesheet" href="css/oocss.css">
-	<link rel="stylesheet" type="text/css" href="icomoon/style.css">
+	<link rel="stylesheet" href="../reset/style.css">
+	<link rel="stylesheet" href="../css/parts/padding.css">
+	<link rel="stylesheet" href="../styles/buttons/buttons.css">
+	<link rel="stylesheet" href="../styles/form/checkbox/checkbox.css">
 </head>
 <body>
 	<main class="painel">
@@ -16,27 +16,39 @@
 				<form id="button-styles">
 					<label>
 						<span class="btn p6 cool blue">3D</span>
-						<input type="radio" name="styles" class="no-appearance" value="3D">
+						<div class="checkbox">
+							<input type="radio" name="styles" class="no-appearance circle p6 blue" value="3D">
+						</div>
 					</label>
 					<label>
 						<span class="btn p6 plastic blue">Platic</span>
-						<input type="radio" name="styles" class="no-appearance" value="plastic">
+						<div class="checkbox">
+							<input type="radio" name="styles" class="no-appearance circle p6 blue" value="plastic">
+						</div>
 					</label>
 					<label>
 						<span class="btn p6 cool blue">Cool</span>
-						<input type="radio" name="styles" class="no-appearance" value="cool">
+						<div class="checkbox">
+							<input type="radio" name="styles" class="no-appearance circle p6 blue" value="cool">
+						</div>
 					</label>
 					<label>
 						<span class="btn p6 normal blue">Normal</span>
-						<input type="radio" name="styles" class="no-appearance" value="normal" checked>
+						<div class="checkbox">
+							<input type="radio" name="styles" class="no-appearance circle p6 blue" value="normal" checked>
+						</div>
 					</label>
 					<label>
 						<span class="btn p6 round blue">Round</span>
-						<input type="radio" name="styles" class="no-appearance" value="round">
+						<div class="checkbox">
+							<input type="radio" name="styles" class="no-appearance circle p6 blue" value="round">
+						</div>
 					</label>
 					<label>
 						<span class="btn p6 gradient blue">Gradient</span>
-						<input type="radio" name="styles" class="no-appearance" value="gradient">
+						<div class="checkbox">
+							<input type="radio" name="styles" class="no-appearance circle p6 blue" value="gradient">
+						</div>
 					</label>
 				</form>
 			</article>
@@ -53,6 +65,7 @@
 					<input type="radio" name="colors" class="no-appearance" value="blue">
 					<input type="radio" name="colors" class="no-appearance" value="green">
 					<input type="radio" name="colors" class="no-appearance" value="purple">
+					<input type="radio" name="colors" class="no-appearance" value="white">
 					<input type="radio" name="colors" class="no-appearance" value="gray" checked>
 				</form>
 				<div class="input" id="tx-color">
@@ -62,8 +75,8 @@
 					<div class="center">
 						<input type="text" name="text" id="button-text" value="Button">
 					</div>
-					<div class="right">
-						<input type="checkbox" name="btn-width" value="1" class="p11 checkbox green slim">
+					<div class="checkbox right">
+						<input type="checkbox" name="btn-width" value="1" class="round p10 blue" checked>
 					</div>
 				</div>
 			</article>
@@ -76,8 +89,8 @@
 					<div class="center">
 						<input type="text" name="text" id="button-text" value="Button">
 					</div>
-					<div class="right">
-						<input type="checkbox" name="btn-width" value="1" class="checkbox p8 green go">
+					<div class="checkbox right">
+						<input type="checkbox" name="btn-width" value="1" class="round p10 blue" checked>
 					</div>
 				</label>
 				<label class="input">
@@ -85,8 +98,8 @@
 					<div class="center">
 						<input type="number" name="text" id="button-text" value="43">
 					</div>
-					<div class="right">
-						<input type="checkbox" name="btn-width" value="1" class="p11 checkbox green slim">
+					<div class="checkbox right">
+						<input type="checkbox" name="btn-width" value="1" class="round p10 blue" checked>
 					</div>
 				</label>
 				<label class="input">
@@ -94,8 +107,8 @@
 					<div class="center">
 						<input type="text" name="text" id="button-text" value="home2">
 					</div>
-					<div class="right">
-						<input type="checkbox" name="btn-width" value="1" class="p11 checkbox into green slim">
+					<div class="checkbox right">
+						<input type="checkbox" name="btn-width" value="1" class="round p10 blue" checked>
 					</div>
 				</label>
 			</div>
